src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__invalid_cast_statement_causes_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E048]: Could not resolve reference to var1
  ┌─ <internal>:7:28
  │
7 │                 i := INT#s.var1; // illegal, var1 cannot be found in INT
  │                            ^^^^ Could not resolve reference to var1
